# homelab

./: .gitignore  AGENTS.md  CLAUDE.md  DEBUG.md  PROMPT.md  README.md  justfile  main.py  mise.local.toml.example  mise.toml  pyproject.toml
ansible/: .ansible-lint  ansible.cfg  bootstrap-ansible.yml  bootstrap-proxmox.yml  configure-vms.yml  main.yml  reproduce_500.yml  requirements.yml  services.yml  site.yml  test.yml  test_connection.yml  vault-pass.sh
logs/: q9-predicate-probe.sh  q9-traversal-order-probe.sh  r12-absent-semantics-probe.sh  repro_newgidmap.sh
packer/: _variables.pkr.hcl  common.pkrvars.hcl  fedora.pkr.hcl  ubuntu26.pkr.hcl  windows11.pkr.hcl
scripts/: bootstrap_cloud_template.sh  build_template.sh  deploy_vms.sh  gen_inventory.py  preflight_tofu_auth.py  run_gate.py  test_acceptance_validation_runbook_shape.py  test_ansible_layout_shape.py  test_backup_schedule.py  test_bitwarden_vm.py  test_bridge.py  test_build_template_runner.py  test_cicustom_snippets.py  test_cloud_templates.py  test_cloudflare_access_runbook_shape.py  test_cpu_governor.py  test_deploy_vms_runner.py  test_dev_vm_module_shape.py  test_dev_vms_main.py  test_docker_vm.py  test_fail2ban.py  test_firewall.py  test_galaxy_requirements_shape.py  test_galaxy_vendored_collection_shape.py  test_galaxy_vendored_role_shape.py  test_grafana.py  test_hardened_ssh.py  test_image_sync.py  test_justfile_shape.py  test_loki.py  test_lxc_service_dns_shape.py  test_lxc_service_module_shape.py  test_mise_config_shape.py  test_modernize_repositories.py  test_packer_hcl_shape.py  (+42 more)
tofu/: main.tf  (+9 more)
(+120 files in other folders)
