[project]
name = "homelab"
version = "0.1.0"
description = "Proxmox dev-VM template pipeline (Packer + OpenTofu)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["test_*.py"]
